revtech-luxury/force-app/main/default/objects/CPQ_Catalog_Item__c/CPQ_Catalog_Item__c.object-meta.xml
<CustomObject>
    <description>Everything sellable: plans, add-ons and setup fees share one shape (design doc S4.1).</description>
    <label>CPQ Catalog Item</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CPQ Catalog Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>