revtech-luxury/force-app/main/default/objects/CPQ_Catalog_Item__c/fields/Charge_Type__c.field-meta.xml
<CustomField>
    <fullName>Charge_Type__c</fullName>
    <label>Charge Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
                <value>
                    <fullName>Recurring Monthly</fullName>
                </value>
                <value>
                    <fullName>One-Time</fullName>
                </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>