revtech-luxury/force-app/main/default/objects/CPQ_Catalog_Item__c/fields/Code__c.field-meta.xml
<CustomField>
    <fullName>Code__c</fullName>
    <description>Stable downstream key, e.g. PLAN_BRAND, ADDON_CONTACTS_500, SETUP_BRAND (R-1).</description>
    <externalId>true</externalId>
    <label>Code</label>
    <length>60</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>