revtech-luxury/force-app/main/default/objects/CPQ_Catalog_Item__c/fields/Setup_Fee_Item__c.field-meta.xml
<CustomField>
    <fullName>Setup_Fee_Item__c</fullName>
    <description>Plans only. Points at the Setup Fee item billed once alongside the plan.</description>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Setup Fee Item</label>
    <referenceTo>CPQ_Catalog_Item__c</referenceTo>
    <relationshipLabel>Plans Using This Setup Fee</relationshipLabel>
    <relationshipName>Plans_Using_This_Setup_Fee</relationshipName>
    <type>Lookup</type>
</CustomField>